--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  font-family: 'Lato';
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.activatedLink {
+  color: black;
+  font-size: 95%;
+  line-height: 1.6;
+}
+
+.centerContent {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
